--- a/TSDIWorkspace/main/templates/main/index.html
+++ b/TSDIWorkspace/main/templates/main/index.html
@@ -1,6 +1,6 @@
 {% extends "main/layout.html" %}
 
-{% block body %}
+{% block content %}
 
 	<div class="pure-g">
 	    <div class="pure-u-1-3"><p>Thirds</p></div>
