--- a/TSDIWorkspace/main/templates/main/portal.html
+++ b/TSDIWorkspace/main/templates/main/portal.html
@@ -1,11 +1,50 @@
 {% extends "main/layout.html" %}
 
-{% block body %}
+{% block content %}
     <h1>Welcome, {{ request.user.first_name }}</h1>
     <ul>
         <li>Username: {{ request.user.username }}</li>
         <li>Email: {{ request.user.email }}</li>
     </ul>
+    <h3>Recent Activities</h3>
 
-    <a href="{% url 'logout' %}">Log Out</a>
+
+<div class="pure-g">
+
+    <div class="pure-u-1 pure-u-md-1-5">
+    	<div class="pure-menu">
+    		<ul class="pure-menu-list">
+		        <li class="pure-menu-item">
+		            <a href="{% url 'myLease' %}" class="pure-menu-link">My Lease</a>
+		        </li>
+		        <li class="pure-menu-item">
+		            <a href="{% url 'bills' %}" class="pure-menu-link">Bills</a>
+		        </li>
+		        <li class="pure-menu-item">
+		            <a href="{% url 'serviceRequests' %}" class="pure-menu-link">Service Requests</a>
+		        </li>
+		        <li class="pure-menu-item">
+		            <a href="{% url 'mailsAndPackages' %}" class="pure-menu-link">Mails & Packages</a>
+		        </li>
+		        <li class="pure-menu-item">
+		            <a href="{% url 'notifications' %}" class="pure-menu-link">Notifications</a>
+		        </li>
+		        <li class="pure-menu-item">
+		            <a href="{% url 'profile' %}" class="pure-menu-link">Profile</a>
+		        </li>
+		        <li class="pure-menu-item">
+		            <a href="{% url 'logout' %}" class="pure-menu-link">Log Out</a>
+		        </li>
+		    </ul>
+		</div>
+	</div>
+
+    <div class="pure-u-1 pure-u-md-4-5">
+    	{% block sideMenuContent %}
+    	<p>Please click on the side menu to begin.</p>
+    	{% endblock %}
+    </div>
+
+</div>
+
 {% endblock %}
