--- a/TSDIWorkspace/main/templates/main/mails_and_packages.html
+++ b/TSDIWorkspace/main/templates/main/mails_and_packages.html
@@ -1,6 +1,11 @@
 {% extends "main/portal.html" %}
 
 {% block sideMenuContent %}
+
     <h4>Mails & Packages</h4>
-    <p>dddddddddd</p>
+
+    {% for mailAndPackage in mailsAndPackages %}
+        <li>{{ mailAndPackage.id }}: {{ mailAndPackage.date }} {{ mailAndPackage.pickedUp }}</li>
+    {% endfor %}
+
 {% endblock %}
