--- a/TSDIWorkspace/main/templates/main/profile.html
+++ b/TSDIWorkspace/main/templates/main/profile.html
@@ -4,6 +4,8 @@
     <h4>Profile</h4>
     <ul>
         <li>Username: {{ request.user.username }}</li>
+        <li>First Name: {{ request.user.first_name }}</li>
+        <li>Last Name: {{ request.user.last_name }}</li>
         <li>Email: {{ request.user.email }}</li>
     </ul>
     <p>Edit personal information</p>
